[package]
name = "sync-engine"
edition = "2021"
version = "0.0.1"

[dependencies]
tokio = { version = "1", features = ["full"]  }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rayon = "1.10"

[dev-dependencies]
tracing-test = "0.2"